# ScIdClient

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  Pipfile  README.md  example.py  games.py  pyproject.toml  requirements.txt  settings.py  setup.cfg
scid_api/: api.py  auth.py  exceptions.py
scidclient/: __main__.py
scidclient/auth_storage/: file_storage.py  storage_provider.py
scidclient/client/: auth_client.py  base_client.py  client.py
scidclient/client/pin_resolver/: manual_pin_resolver.py  pin_resolver.py
scidclient/exceptions/: exception_handler.py
scidclient/exceptions/specific/: invalid_pin_exception.py  unauthorized_exception.py
scidclient/models/: auth.py  game_client.py  games.py
scripts/: setup_pyenv.sh
sphinx/: conf.py  index.rst
sphinx/_templates/: module-template.rst
